Add placeholder answer

--- a/QuestionBot/Base.lproj/Main.storyboard
+++ b/QuestionBot/Base.lproj/Main.storyboard
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="15702" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wVz-LV-Rjr">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wVz-LV-Rjr">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="15704"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -56,7 +57,7 @@ Ask me a question.</string>
                                             <outlet property="delegate" destination="wVz-LV-Rjr" id="8p2-zE-5b2"/>
                                         </connections>
                                     </textField>
-                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOk-EP-Q9a">
+                                    <button opaque="NO" contentMode="scaleToFill" enabled="NO" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="SOk-EP-Q9a">
                                         <rect key="frame" x="0.0" y="170" width="404" height="44"/>
                                         <color key="backgroundColor" red="0.44129186869999998" green="0.64658468960000004" blue="0.87062031029999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                         <constraints>
@@ -73,13 +74,13 @@ Ask me a question.</string>
                                 </subviews>
                             </stackView>
                         </subviews>
+                        <viewLayoutGuide key="safeArea" id="Dlr-yR-KnP"/>
                         <color key="backgroundColor" red="0.86666666670000003" green="0.86666666670000003" blue="0.86666666670000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstAttribute="trailing" secondItem="9Gu-aH-lRt" secondAttribute="trailing" constant="5" id="G0F-Pq-SxH"/>
                             <constraint firstItem="9Gu-aH-lRt" firstAttribute="leading" secondItem="Xrx-PO-oO0" secondAttribute="leading" constant="5" id="ngq-dm-mhQ"/>
-                            <constraint firstItem="9Gu-aH-lRt" firstAttribute="top" secondItem="bSZ-fy-bZY" secondAttribute="bottom" id="q4t-WE-oCK"/>
+                            <constraint firstItem="9Gu-aH-lRt" firstAttribute="top" secondItem="Dlr-yR-KnP" secondAttribute="top" id="q4t-WE-oCK"/>
                         </constraints>
-                        <viewLayoutGuide key="safeArea" id="Dlr-yR-KnP"/>
                     </view>
                     <connections>
                         <outlet property="askButton" destination="SOk-EP-Q9a" id="Giz-q5-vmd"/>
